upgrade + background grey by default to avoid flickering

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,5 @@
 @import "style_common.css";
 /*----------------------------------General Styles----------------------------------*/
-body {
-    font-size: 12px;
-    font-family: 'Roboto Condensed', sans-serif;
-    background: #000 url(../images/vcard/wrapper.jpg) center
-}
-
 a {
     color: #6aa2c5
 }
