--- a/css/style_common.css
+++ b/css/style_common.css
@@ -3,7 +3,7 @@
 body {
     font-size: 13px;
     font-family: 'Roboto Condensed', sans-serif;
-    background: #000 url(../images/vcard/wrapper.jpg) center
+    background: #efefef url(../images/vcard/wrapper.jpg) center
 }
 
 a {
